# python_tradingbot_framework

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  KRONOS_INTEGRATION.md  LICENSE  LLM_README.md  README.md  mkdocs.yml  onetime_getTelegramChats.py  pyproject.toml  syncToGithub.sh
.claude/: settings.local.json
data/: FXStabilizer_EUR - Turbo.csv  ZenbotZero.csv  syntheticmetal.csv
docs/: DEPLOYMENT.md  README.md  examplequantstatsreport.html  index.md
exploration/: explore_555xoil.ipynb  explore_classimbalance.ipynb  explore_feargreeed.ipynb  explore_signalsmooth2.ipynb  explore_signalsmoothing.ipynb  explore_swingtradetitanium.py  explore_zenbotzero.ipynb
kronos_space/: Dockerfile  app.py  requirements.txt
scripts/: onetime_benchmarkBuyHold.py  onetime_getTelegramSessionString.py
tests/: conftest.py  test_helpers.py  test_livetrade.py  test_livetrade_darwinex.py  test_livetrade_etoro.py  test_livetrade_ib.py  test_portfolio_manager.py  test_symbol_map.py
tradingbot/: __init__.py  adaptivemeanreversionbot.py  aideepseektoolbot.py  aihedgefundbot.py  calculate_portfolio_worth.py  earningsinsidertiltbot.py  eurusdtreebot.py  feargreedbot.py  goldenbutterflymombot.py  gptbasedstrategytabased.py  kronosbot.py  kronostraderbot.py  livetrade_collective2.py  livetrade_darwinex.py  livetrade_etoro.py  livetrade_interactive_brokers.py  onetime_benchmarkBuyHold.py  recursivedecayharvestbot.py  regimeadaptivebot.py  sharpeportfoliooptweekly.py  squeezemomentumbot.py  stocknewssentimentbot.py  swingtitaniumbot.py  synthesizedhyperconvexitybot.py  (+7 more)
(+83 files in other folders)
